--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.2",
 		"promise-mysql": "^5.2.0"
+	},
+	"devDependencies": {
+		"morgan": "^1.10.0"
 	}
 }
